<resources>
    <string name="app_name">Lab 2.2 Profile</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="web">Web</string>
    <string name="phone">Phone</string>
    <string name="mail">Mail</string>
    <string name="main">Main</string>
    <string name="update">Update</string>
    <string name="input_name">Name</string>
    <string name="input_email">Email</string>
    <string name="save">Save</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="start">Start</string>
    <string name="title_activity_mode">ModeActivity</string>
    <string name="addi">addi</string>
    <string name="subtraction">Subtraction</string>
    <string name="addition">Addition</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="mix">Mix</string>
    <string name="pratice">Pratice</string>
    <string name="multiplayer">Multiplayer</string>
    <color name="blue">#42A5F5</color>
    <color name="yellow">#FFF176</color>
    <color name="lightblue">#E1F5FE</color>


</resources>
